<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectionActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/connexion"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:orientation="horizontal"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/ip"/>

    <EditText
        android:id="@+id/ip"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="192.168.1.73"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/port"/>

    <EditText
        android:id="@+id/port"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="number"
        android:text="52000"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/connect"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/connect"/>

</LinearLayout>